feat: Display allowed news targets in publish section of publishing drawers - EXO-60989 (#721)
We will display the allowed news targets in the publish section of the different publishing drawers.